<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:paddingTop="56dp"
android:paddingLeft="24dp"
android:paddingRight="24dp">

<!--ImageView

    android:src="@drawable/logo"
    android:layout_width="wrap_content"
    android:layout_height="72dp"
    android:layout_marginBottom="24dp"
    android:layout_gravity="center_horizontal" /-->

<!--  Email Label -->
<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">
    <EditText android:id="@+id/et_asset_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters"
        android:hint="@string/token_code" />
</android.support.design.widget.TextInputLayout>

<!--  Password Label -->
<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">
    <EditText android:id="@+id/et_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/max_limit"/>
</android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="5"
            android:minLines="1"
            android:maxLines="5"
            android:hint="@string/description"
            android:inputType="textMultiLine|textCapSentences"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/check_allow_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allow_change"
        android:checked="true"
        />



    <android.support.v7.widget.AppCompatButton
    android:id="@+id/btn_create"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="24dp"
    android:padding="12dp"
    android:text="@string/button_create"/>

<!--TextView android:id="@+id/link_signup"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    android:text="No account yet? Create one"
    android:gravity="center"
    android:textSize="16dip"/-->

</LinearLayout>